objects/AssignedResource.object
<CustomObject>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Approximate Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Approximate Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelTimeFrom__c</fullName>
        <label>Approximate Travel Time From (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_From_Source__c</fullName>
        <label>Estimated Travel Time From Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName>
        <label>Estimated Travel Time To Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__calculated_duration__c</fullName>
        <label>calculated duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchedStart__c</fullName>
        <description>Scheduled Start Time from the Service Appointment.</description>
        <formula>ServiceAppointment.SchedStartTime</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled Start Time from the Service Appointment.</inlineHelpText>
        <label>Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Status__c</fullName>
        <description>Boolean field determining if the Service Appointment Status is set to Scheduled.</description>
        <formula>Ispickval(ServiceAppointment.Status,&quot;Scheduled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Boolean field determining if the Service Appointment Status is set to Scheduled.</inlineHelpText>
        <label>Scheduled Status</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>